Added documentation and gitlab pages pipeline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
 cmake_minimum_required(VERSION  2.8)
 project(design-patterns)
 
-add_executable (memento src/behavioral/memento/src/main.cpp)
+# behavioral patterns
+add_executable (memento pattern/behavioral/memento/src/main.cpp)
+
+# structural patterns
+add_executable (decorator pattern/structural/decorator/src/main.cpp)
