--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ pages:
   stage: deploy
   interruptible: true
   script:
-  - antora --fetch --redirect-facility=gitlab --to-dir=public antora.yml
+  - antora --fetch --redirect-facility=gitlab --to-dir=public antora-playbook.yml
   artifacts:
     paths:
     - public
