--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -4,7 +4,7 @@ runtime:
     failure_level: warn
 site:
   title: Software Engineering Pattern
-  start_page: antora::main.adoc
+  start_page: softwareengineeringpattern::index.adoc
   robots: allow
 content:
   sources:
