--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -4,6 +4,7 @@ runtime:
     failure_level: warn
 site:
   title: Software Engineering Pattern
+  start_page: softwareengineeringpattern::index.adoc
   robots: allow
 content:
   sources:
