--- a/pattern/antora.yml
+++ b/pattern/antora.yml
@@ -4,9 +4,8 @@ prerelease: '.0-alpha.2'
 title: Software Engineering Pattern
 asciidoc:
   attributes:
-    release-date: '2022-11-01'
-    release-tag: testing
-    release-version: '3.2.0-alpha.2'
+    release-date: '2023-07-08'
+    release-version: '0.1'
     source-language: asciidoc@
     xrefstyle: short@
     example-caption: false
