Added abstract factory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ add_executable (memento pattern/behavioral/memento/src/main.cpp)
 # concurrency patterns
 
 # creational patterns
+add_executable (abstract_factory pattern/creational/abstract_factory/src/main.cpp)
 
 # structural patterns
 add_executable (decorator pattern/structural/decorator/src/main.cpp)
