Added builder pattern

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable (memento pattern/behavioral/memento/src/main.cpp)
 
 # creational patterns
 add_executable (abstract_factory pattern/creational/abstract_factory/src/main.cpp)
+add_executable (builder pattern/creational/builder/src/main.cpp)
 
 # structural patterns
 add_executable (decorator pattern/structural/decorator/src/main.cpp)
