--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable (memento pattern/behavioral/memento/src/main.cpp)
 add_executable (abstract_factory pattern/creational/abstract_factory/src/main.cpp)
 add_executable (builder pattern/creational/builder/src/main.cpp)
 add_executable (factory_method pattern/creational/factory_method/src/main.cpp)
+add_executable (prototype pattern/creational/prototype/src/main.cpp)
 add_executable (singleton pattern/creational/singleton/src/main.cpp)
 
 # structural patterns
